[package]
name = "polkadot-service"
version = "0.9.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "polkadot-v0.9.8" }
beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "polkadot-v0.9.8" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.8" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

# External Crates
futures = "0.3.15"
hex-literal = "0.3.1"
tracing = "0.1.26"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.23"
kvdb = "0.9.0"
kvdb-rocksdb = { version = "0.11.1", optional = true }
async-trait = "0.1.42"

# Polkadot
polkadot-node-core-parachains-inherent = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-client = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-rpc = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-subsystem = { package = "polkadot-node-subsystem", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }

# Polkadot Runtimes
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
westend-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }

# Polkadot Subsystems
polkadot-availability-bitfield-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-availability-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-availability-recovery = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-collator-protocol = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-gossip-support = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-network-bridge = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-collation-generation = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-av-store = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-backing = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-bitfield-signing = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-candidate-validation = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-chain-api = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-provisioner = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-statement-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-approval-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }
polkadot-node-core-approval-voting = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8", optional = true }

[dev-dependencies]
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
env_logger = "0.8.4"

[features]
default = ["db", "full-node"]

db = [
	"service/db"
]

full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"polkadot-collator-protocol",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"sc-finality-grandpa-warp-sync",
	"kvdb-rocksdb"
]

light-node = []

# Configure the native runtimes to use. Polkadot is always enabled by default.
#
# Validators require the native runtime currently
kusama-native = [ "kusama-runtime", "polkadot-client/kusama" ]
westend-native = [ "westend-runtime", "polkadot-client/westend" ]
rococo-native = [ "rococo-runtime", "polkadot-client/rococo" ]

runtime-benchmarks = [
	"polkadot-runtime/runtime-benchmarks",
	"kusama-runtime/runtime-benchmarks",
	"westend-runtime/runtime-benchmarks",
	"rococo-runtime/runtime-benchmarks"
]
try-runtime = [
	"polkadot-runtime/try-runtime",
	"kusama-runtime/try-runtime",
	"westend-runtime/try-runtime",
	"rococo-runtime/try-runtime",
]
malus = ["full-node"]
